src/record/snapshots/realm__record__other__tests__wire.snap
---
source: src/record/other.rs
expression: wire
---
[
    6,
    102,
    97,
    99,
    97,
    100,
    101,
    7,
    101,
    120,
    97,
    109,
    112,
    108,
    101,
    3,
    99,
    111,
    109,
    0,
    255,
    0,
    0,
    1,
    0,
    0,
    28,
    32,
    0,
    3,
    250,
    202,
    222,
]
