src/record/snapshots/realm__record__other__tests__zone.snap
---
source: src/record/other.rs
expression: record
---
deadbeef.example.com.	300	IN	TYPE65280	\# 4 deadbeef
