src/record/snapshots/realm__record__other__tests__zone_blanks.snap
---
source: src/record/other.rs
expression: "read_zone(\". 3600 IN TYPE65280 \\\\# 4 00 (\\n11\\n22 ) 33\", Vec::new().into())"
---
Ok(
    Node {
        children: {},
        records: {
            (
                In,
                Other(
                    65280,
                ),
            ): [
                Other(
                    OtherRecord {
                        name: DomainName(.),
                        ttl: 3600,
                        rtype: Other(
                            65280,
                        ),
                        rclass: In,
                        data: [
                            0,
                            17,
                            34,
                            51,
                        ],
                    },
                ),
            ],
        },
    },
)
